# bundlemanager_ecological_rule_manager

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ecologicalrulemgrservice.gni
etc/init/: BUILD.gn  ecologicalRuleMgrService.rc  ecologicalrulemgrservice.cfg
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: ecological_rule_mgr_service_client.h  ecological_rule_mgr_service_interface.h  ecological_rule_mgr_service_param.h  ecological_rule_mgr_service_proxy.h
interfaces/innerkits/src/: ecological_rule_mgr_service_client.cpp  ecological_rule_mgr_service_param.cpp  ecological_rule_mgr_service_proxy.cpp
interfaces/kits/js/declaration/: BUILD.gn
interfaces/kits/js/declaration/api/: @ohos.bundle.ecologicalRuleDataManager.d.ts  @ohos.bundle.sceneManager.d.ts
interfaces/kits/js/napi/: BUILD.gn
interfaces/kits/js/napi/include/: ecological_rule_mgr_service_context_container.h  ecological_rule_mgr_service_napi.h
interfaces/kits/js/napi/src/: ecological_rule_mgr_service_context_container.cpp  ecological_rule_mgr_service_module.cpp  ecological_rule_mgr_service_napi.cpp
patches/: patches.json
profile/: 6105.json  BUILD.gn
services/: BUILD.gn
services/enginecache/include/: ecological_rule_engine_cache.h  ecological_rule_engine_constants.h
services/enginecache/src/: ecological_rule_engine_cache.cpp
services/manager/include/: ecological_rule_mgr_service.h  ecological_rule_mgr_service_stub.h
services/manager/src/: ecologic_rule_mgr_service.cpp  ecologic_rule_mgr_service_stub.cpp
services/ruleengine/include/: and_exp.h  base_exp.h  bundle_name_exp.h  ecological_rule_calculator.h  ecological_rule_calculator_impl.h  equal_exp.h  is_jump_type_exp.h  or_exp.h  var_exp.h
services/ruleengine/src/: and_exp.cpp  bundle_name_exp.cpp  ecological_rule_calculator.cpp  ecological_rule_calculator_impl.cpp  equal_exp.cpp  is_jump_type_exp.cpp  or_exp.cpp  var_exp.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/ecologicalrulemgrservicestub_fuzzer/: BUILD.gn  EcologicalRileMgrServiceStubFuzzer.cpp  EcologicalRileMgrServiceStubFuzzer.h
test/fuzztest/ecologicalrulemgrservicestub_fuzzer/corpus/: init
test/unittest/: BUILD.gn  ecological_rule_mgr_service_client_test.cpp
utils/: BUILD.gn
utils/include/: ecological_rule_mgr_service_logger.h
