# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ability_runtime_path = "//foundation/ability/ability_runtime"
ecologicalrulemgrservice_root_path =
    "//foundation/bundlemanager/ecological_rule_manager"
innerkits_path = "${ecologicalrulemgrservice_root_path}/interfaces/innerkits"
ecologicalrulemgrservice_path = "${ecologicalrulemgrservice_root_path}/services"
ecologicalrulemgrservice_utils_path =
    "${ecologicalrulemgrservice_root_path}/utils"
