# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/bundlemanager/ecological_rule_mgr/ecologicalrulemgrservice.gni")

config("ecologicalrulemgrservice_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "./manager/include",
    "../utils/include",
    "${innerkits_path}/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
}

ohos_shared_library("ecologicalrulemgr_service") {
  configs = [ "${ecologicalrulemgrservice_utils_path}:utils_config" ]

  public_configs = [
    "//commonlibrary/c_utils/base:utils_config",
    ":ecologicalrulemgrservice_config",
  ]

  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]
  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  sources = [
    "manager/src/ecologic_rule_mgr_service.cpp",
    "manager/src/ecologic_rule_mgr_service_stub.cpp",
    "${innerkits_path}/src/ecological_rule_mgr_service_param.cpp"
  ]

  deps = []
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
  ]
  part_name = "ecological_rule_mgr"
  subsystem_name = "bundlemanager"
  use_exceptions = true
}
