# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../ecologicalrulemgrservice.gni")

config("ecologicalrulemgrservice_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "./manager/include",
    "../utils/include",
    "${innerkits_path}/include",
  ]
}

ohos_shared_library("ecologicalrulemgr_service") {
  configs = [ "${ecologicalrulemgrservice_utils_path}:utils_config" ]

  public_configs = [ ":ecologicalrulemgrservice_config" ]

  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]
  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  sources = [
    "${innerkits_path}/src/ecological_rule_mgr_service_param.cpp",
    "manager/src/ecologic_rule_mgr_service.cpp",
    "manager/src/ecologic_rule_mgr_service_stub.cpp",
  ]

  deps = []
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "c_utils:utilsbase",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  public_external_deps = [
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]
  part_name = "ecological_rule_manager"
  subsystem_name = "bundlemanager"
  use_exceptions = true
}
