# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/bundlemanager/ecological_rule_mgr/ecologicalrulemgrservice.gni")
import("//build/ohos.gni")

config("ecologicalrulemgrservice_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${ecologicalrulemgrservice_path}/manager/include",
    "${ecologicalrulemgrservice_utils_path}/include",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("erms_client") {
  sources = [
    "${innerkits_path}/src/ecological_rule_mgr_service_proxy.cpp",
    "${innerkits_path}/src/ecological_rule_mgr_service_param.cpp",
    "${innerkits_path}/src/ecological_rule_mgr_service_client.cpp",
  ]

  configs = [ ":ecologicalrulemgrservice_client_config" ]
  public_configs = [ ":ecologicalrulemgrservice_client_config" ]
  deps = [
    "//third_party/jsoncpp:jsoncpp",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "bundlemanager"
  part_name = "ecological_rule_mgr"
}
