# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../../ecologicalrulemgrservice.gni")

config("ecologicalrulemgrservice_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${ecologicalrulemgrservice_path}/manager/include",
    "${ecologicalrulemgrservice_utils_path}/include",
  ]
}

ohos_shared_library("erms_client") {
  sources = [
    "${innerkits_path}/src/ecological_rule_mgr_service_client.cpp",
    "${innerkits_path}/src/ecological_rule_mgr_service_param.cpp",
    "${innerkits_path}/src/ecological_rule_mgr_service_proxy.cpp",
  ]

  configs = [ ":ecologicalrulemgrservice_client_config" ]
  public_configs = [ ":ecologicalrulemgrservice_client_config" ]
  deps = []
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "bundlemanager"
  part_name = "ecological_rule_manager"
}
