# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("../../ecologicalrulemgrservice.gni")

module_output_path = "ecological_rule_manager/clientTest"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../services/manager/include",
    "include",
    "${innerkits_path}/include",
    "//utils/system/safwk/native/include",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
}

ohos_unittest("EcologicalRuleMgrServiceClientTest") {
  module_out_path = module_output_path

  sources = [ "ecological_rule_mgr_service_client_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${ecologicalrulemgrservice_root_path}/interfaces/innerkits:erms_client",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":EcologicalRuleMgrServiceClientTest" ]
}
