# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/bundlemanager/ecological_rule_mgr/ecologicalrulemgrservice.gni")

module_output_path = "ecological_rule_mgr/stubFuzzTest"

##############################fuzztest##########################################
ohos_fuzztest("EcologicalRuleMgrServiceStubFuzzTest") { # 定义测试套名称
  module_out_path = module_output_path
  fuzz_config_file = "${ecologicalrulemgrservice_root_path}/test/fuzztest/ecologicalrulemgrservicestub_fuzzer" # Fuzz组套路径

  include_dirs = [
     "../../../services/manager/include",
     "../../../services/ruleengine/include",
     "../../../services/enginecache/include",
     "include",
     "${innerkits_path}/include",
     "//utils/system/safwk/native/include",
     "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
     "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include",
     "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
     "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "EcologicalRileMgrServiceStubFuzzer.cpp", # Fuzz用例文件
  ]

  deps = [
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]
}
###############################################################################
group("fuzztest") { # [Group]引用Fuzz测试套
  testonly = true
  deps = []
  deps += [
    ":EcologicalRuleMgrServiceStubFuzzTest",
  ]
}
###############################################################################