# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/bundlemanager/ecological_rule_mgr/ecologicalrulemgrservice.gni")
import("//build/ohos.gni")

ohos_shared_library("ecologicalrulemgrservice") {
  include_dirs = [
    "./include",
    "${innerkits_path}/include",
    "${ecologicalrulemgrservice_path}/manager/include",
    "${ecologicalrulemgrservice_utils_path}/include",
    "//foundation/arkui/napi/interfaces/kits/napi",
    "//third_party/node/src",
    "//third_party/libuv/include",
  ]

  configs = [ "${ecologicalrulemgrservice_utils_path}:utils_config" ]
  
  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [
    "src/ecological_rule_mgr_service_module.cpp",
    "src/ecological_rule_mgr_service_napi.cpp",
    "src/ecological_rule_mgr_service_context_container.cpp"
  ]

  deps = [
    "${innerkits_path}:erms_client",
    "//third_party/libuv:uv_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi"
  ]

  relative_install_dir = "module"
  subsystem_name = "bundlemanager"
  part_name = "ecological_rule_mgr"
}
